force-app/main/default/objects/Apttus_Config2__BatchJobParameter__c/Apttus_Config2__BatchJobParameter__c.object-meta.xml
<CustomObject>
    <description>Represents a batch job bind parameter</description>
    <label>Batch Job (CPQ) Parameter</label>
    <nameField>
        <label>Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Job (CPQ) Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>