force-app/main/default/objects/Apttus_Config2__BatchJobParameter__c/fields/Apttus_Config2__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BatchJobId__c</fullName>
    <description>ID of the associated batch job</description>
    <inlineHelpText>ID of the associated batch job</inlineHelpText>
    <label>Batch Job (CPQ)</label>
    <referenceTo>Apttus_Config2__BatchJob__c</referenceTo>
    <relationshipLabel>Batch Job (CPQ) Parameters</relationshipLabel>
    <relationshipName>BatchJobCPQParameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>