force-app/main/default/objects/Apttus_Config2__BatchJobParameter__c/fields/Apttus_Config2__JobSpec__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobSpec__c</fullName>
    <description>The job specification</description>
    <inlineHelpText>The job specification</inlineHelpText>
    <label>Job Spec</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>