force-app/main/default/objects/Apttus_Config2__BatchJobParameter__c/fields/Apttus_Config2__ParameterValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParameterValue__c</fullName>
    <description>The bind parameter value</description>
    <inlineHelpText>The bind parameter value</inlineHelpText>
    <label>ParameterValue</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>